Added the new interceptor to work with Okta-Angular 1.0.0. Cleaned up code.

--- a/Frontend/JoggingDiary/package.json
+++ b/Frontend/JoggingDiary/package.json
@@ -21,21 +21,22 @@
     "@angular/platform-browser": "^5.2.9",
     "@angular/platform-browser-dynamic": "^5.2.9",
     "@angular/router": "^5.2.9",
-    "@okta/okta-angular": "0.0.13",
-    "@okta/okta-auth-js": "^1.13.0",
+    "@okta/okta-angular": "1.0.0",
+    "@okta/okta-auth-js": "^1.15.0",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
+    "npm": "^5.8.0",
     "rxjs": "^5.5.7",
-    "zone.js": "^0.8.19"
+    "zone.js": "^0.8.25"
   },
   "devDependencies": {
-    "@angular/cli": "^1.7.3",
+    "@angular/cli": "^1.7.4",
     "@angular/compiler-cli": "^5.2.9",
     "@angular/language-service": "^5.2.9",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
-    "@types/lodash": "^4.14.104",
-    "@types/node": "^6.0.102",
+    "@types/lodash": "^4.14.106",
+    "@types/node": "^6.0.104",
     "codelyzer": "^4.2.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
